fix skew transform on testimoni card when on mobile view

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -18,8 +18,7 @@ html {
       font-size: 75%; } }
 
 body {
-  overflow-x: hidden;
-  padding: 3rem; }
+  overflow-x: hidden; }
   @media (max-width: 900px) {
     body {
       padding: 0; } }
@@ -473,6 +472,9 @@ body {
     opacity: 1; }
   .story:hover .story__shape {
     transform: translateX(-3rem) skewX(12deg) scale(1); }
+    @media (max-width: 600px) {
+      .story:hover .story__shape {
+        transform: translateX(-3rem) skewX(0) scale(1); } }
   .story:hover .story__img {
     transform: scale(1);
     filter: blur(3px) brightness(80%); }
@@ -742,6 +744,9 @@ body {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
+      @media (max-width: 1200px) {
+        .row [class^="col-"]:not(:last-child) {
+          margin-right: 2rem; } }
       @media (max-width: 900px) {
         .row [class^="col-"]:not(:last-child) {
           margin-right: 0;
@@ -753,10 +758,16 @@ body {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
     width: calc((100% - 2 * 6rem) / 3); }
+    @media (max-width: 1200px) {
+      .row .col-1-of-3 {
+        width: calc((100% - 2 * 2rem) / 3); } }
   .row .col-2-of-3 {
     width: calc( 2 * ((100% - 2 * 6rem) / 3) + 6rem); }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 6rem) / 4); }
+    @media (max-width: 1200px) {
+      .row .col-1-of-4 {
+        width: calc((100% - 3 * 2rem) / 4); } }
   .row .col-2-of-4 {
     width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
@@ -946,7 +957,7 @@ body {
 
 .section-about {
   background-color: #f7f7f7;
-  padding: 25rem 0;
+  padding: 25rem 2rem;
   margin-top: -20vh; }
   @media (max-width: 900px) {
     .section-about {
@@ -956,7 +967,7 @@ body {
       padding: 25rem 0; } }
 
 .section-features {
-  padding: 20rem 0;
+  padding: 20rem 2rem;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/nat-4.jpg);
   background-size: cover;
   transform: skewY(-7deg);
@@ -969,7 +980,7 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0 15rem 0;
+  padding: 25rem 2rem 15rem 2rem;
   margin-top: -10rem; }
   @media (max-width: 900px) {
     .section-tours {
