--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -84,6 +84,10 @@
 
   &:hover &__shape {
     transform: translateX(-3rem) skewX(12deg) scale(1);
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0) scale(1);
+    }
   }
 
   &:hover &__img {
